# tgdlbot

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml.example
src/: appstorage.rs  downloader.rs  macros.rs  main.rs
src/commands/: allowchat.rs  allowuser.rs  delchat.rs  deluser.rs  download.rs  help.rs  mod.rs  start.rs  stop.rs
